# Vision2019

./: .gitignore  DualCamera.cpp  README.md  TODO.txt  Vision 2019.sln  Vision 2019.vcxproj  Vision 2019.vcxproj.filters  frc2020_limelight.txt  launch.json  runNow.sh
src/: CMakeCache.txt  CMakeLists.txt  CameraWrapper.cpp  CameraWrapper.h  Const.h  ExperimentalTestCode.h  Makefile  OffBoardComms.cpp  OffBoardComms.h  OutputValues.h  Processing.cpp  Processing.h  ProcessingBase.cpp  ProcessingBase.h  ProcessingCargo.cpp  ProcessingCargo.h  ProcessingHatch.cpp  ProcessingHatch.h  ProcessingLine.cpp  ProcessingLine.h  ProcessingRetro.cpp  ProcessingRetro.h  VisionProcessing  VisionProcessing.cpp  VisionProcessingTest  c_index_960x1280_Landscape_uint16.img  c_index_960x1280_Portrait_uint16.img  cmake_install.cmake  etc_systemd_network_20-wired.network  etc_systemd_system_Vision2019.service  r_index_960x1280_Landscape_uint16.img  r_index_960x1280_Portrait_uint16.img  run.sh  runNow.sh
x64/Debug/: processingbase.new.obj.enc
